my-nginx-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx 
  labels: #label for deployment
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels: #pods match label to deployment 
      app: nginx
  template: #config file for a pod
    metadata:
      labels:
        app: nginx #can be any key - value pair
    spec:
      containers:
      - name: nginx
        image: nginx:1.16
        ports:
        - containerPort: 8080
