mongo-depl-lol.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deploys
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels: 
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: my-mongo-service
spec:
  selector: 
    app: mongodb #Matches labels to pod & deployment
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017 #should match container port / deployment port
