dashboard-ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: dashboard-ingress
#   namespace: kubernetes-dashboard
# spec:
#   rules:
#   - host: dashboard.com
#     http: 
#       paths:
#       - backend:
#           serviceName: kubernetes-dashboard
#           servicePort: 80

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - host: dashboard.com
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
